--- a/helm/petclinic/templates/deployment.yaml
+++ b/helm/petclinic/templates/deployment.yaml
@@ -1,39 +1,37 @@
-#Deployment
-###controllers/pb-deploy.tml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: petclinic-deployment
+  name: {{ include "petclinic.fullname" . }}
+  labels:
+    app: {{ include "petclinic.name" . }}
+    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    release: "{{ .Release.Name }}"
+    heritage: "{{ .Release.Service }}"
 spec:
-  replicas: 1
+  replicas: {{ .Values.replicaCount }}
+  revisionHistoryLimit: 10
   strategy:
     type: RollingUpdate
     rollingUpdate:
-  minReadySeconds: 5
-  revisionHistoryLimit: 10
+      maxUnavailable: 1
+      maxSurge: 1
   selector:
     matchLabels:
-      app: petclinic-app
+      app: {{ include "petclinic.name" . }}
   template:
     metadata:
       labels:
-        app: petclinic-app
+        app: {{ include "petclinic.name" . }}
     spec:
       containers:
       - name: petclinic-container
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-        imagePullPolicy: Always
-        resources:
-          limits:
-            cpu: '1'
-            memory: '1G'
-          requests:
-            cpu: '1'
-            memory: '1G'
+        imagePullPolicy: {{ .Values.image.pullPolicy }}
         ports:
         - containerPort: 8080
+        resources:
+          {{- toYaml .Values.resources | nindent 10 }}
       imagePullSecrets:
-      - name: regcred
-
-
-
+      {{- if .Values.imagePullSecrets }}
+      {{- toYaml .Values.imagePullSecrets | nindent 6 }}
+      {{- end }}
