--- a/helm/petclinic/values.yaml
+++ b/helm/petclinic/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 1
 
 image:
   repository: docker.io/abdraheem98/petclinic
-  tag: latest
+  tag: 1
   pullPolicy: IfNotPresent
 
 imagePullSecrets:
